@@ -51,7 +51,7 @@ public class MapAccessorToComponent {
     public void run() throws IOException {
         String code = "record R(int val1, int val2) {}";
         JavaCompiler c = ToolProvider.getSystemJavaCompiler();
-        JavacTask t = (JavacTask) c.getTask(null, null, null, null, null,
+        JavacTask t = (JavacTask) c.getTask(null, null, null, List.of("--enable-preview", "-source", Integer.toString(Runtime.version().feature())), null,
                                             List.of(new MyFileObject(code)));
         TypeElement record = (TypeElement) t.analyze().iterator().next();
         for (RecordComponentElement rce : ElementFilter.recordComponentsIn(record.getEnclosedElements())) {
@@ -75,4 +75,3 @@ public class MapAccessorToComponent {
         }
     }
 }
-
